[package]
name = "httpcodec"
version = "0.1.9"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Encoders and decoders for HTTP/1.x messages based on bytecodec crate"
homepage = "https://github.com/sile/httpcodec"
repository = "https://github.com/sile/httpcodec"
readme = "README.md"
keywords = ["http"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/httpcodec"}
codecov = {repository = "sile/httpcodec"}

[dependencies]
bytecodec = "0.2"
trackable = "0.2"
